--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,35 @@
-.padre{
-    /* flex-flow: row wrap; */
-    display: flex;
-    /* flex-direction: column; */
-    flex-wrap: wrap;
-    width: 800px;
-    height: 800px;
-    border: 1px solid;
-   align-content: stretch;
-
-}
-.diseno_hijo{
-    height: 100px;
-    width: 200px;
-}
-.hijo1{
-
-}
-
-img{
-    height: 400px;
-    width: 400px;
-}
+    .contenedor-padre {
+        display: flex;
+        flex-wrap: wrap;
+        /* flex-flow: row wrap; */
+        /* justify-content: center; */
+        /* align-content: center; */        
+      }
+      
+      .columna-izquierda {
+        flex: 1;
+        background-color: #ddd;
+        padding: 20px;
+      }
+      
+      .columna-derecha {
+        flex: 1;
+        padding: 15px;
+        justify-content: center;
+      }
+      
+      .grid-container {
+        display: grid;
+        /* grid-template-columns: repeat(4, 1fr); */
+        /* grid-template-rows: repeat(3, 1fr); */
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-auto-rows: minmax(150px, auto);
+        gap: 10px;
+      }
+      
+      .grid-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      
