--- a/css/styles.css
+++ b/css/styles.css
@@ -9,21 +9,20 @@
       .columna-izquierda {
         flex: 1;
         background-color: #ddd;
-        padding: 20px;
+        padding: 10px;
       }
       
       .columna-derecha {
-        flex: 1;
-        padding: 15px;
-        justify-content: center;
+        flex: 2;
+        padding: 20px;
       }
       
       .grid-container {
         display: grid;
-        /* grid-template-columns: repeat(4, 1fr); */
-        /* grid-template-rows: repeat(3, 1fr); */
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-auto-rows: minmax(150px, auto);
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
+        /* grid-auto-rows: minmax(150px, auto); */
         gap: 10px;
       }
       
@@ -32,4 +31,35 @@
         height: 100%;
         object-fit: cover;
       }
-      
+
+      .padre_nav{
+        display: flex;
+        justify-content:space-around;
+        align-items:stretch;
+        flex-grow: 1;
+        
+      }
+
+      .logo img {
+        height:150px ;
+        width:150px ;
+      }
+  
+.logo{
+  align-items: ;
+}
+
+.menu {
+height: 100%;
+display: flex;
+        background-color: #0d2717;
+        border-radius: 2rem;
+    }
+    .menu a {
+        text-decoration: none;
+        font-size: 2rem;
+        color: white;
+    }
+    .menu  a:hover {
+        box-shadow: 0 0.3rem 0.9rem rgba(138, 193, 146, 0.548);
+    }
